Fix video not pausing when modal is closed
This was also happening before switching to a YouTube embed, but slightly
differently: the video was pausing, but it was still clickable, although it
was invisible on the screen.

This hotfix:

* drops embed.ly embed code and switch to native iframe
* sends a pause command into the iframe
* aligns the iframe into the modal

--- a/app/client/styles/scss/_app.scss
+++ b/app/client/styles/scss/_app.scss
@@ -691,6 +691,14 @@ section.text {
                     text-shadow: 0px 2px 1px rgba(0, 0, 0, 0.4);
                 }
             }
+
+          .modal-header {
+            text-align: left;
+          }
+
+          .modal-inner {
+            text-align: center;
+          }
         }
     }
 }
